Rename file in update_rules.yml workflow

--- a/.github/workflows/update_rules.yml
+++ b/.github/workflows/update_rules.yml
@@ -32,6 +32,6 @@ jobs:
       run: |
         git config --local user.email "github-actions[bot]@users.noreply.github.com"
         git config --local user.name "github-actions[bot]"
-        git add FuckAD.conf || echo "Nothing to add"
+        git add fuck_ad_sr.conf || echo "Nothing to add"
         git commit -m "Auto update FuckAD rules" || echo "No changes to commit"
         git push
