--- a/.github/workflows/update_rules.yml
+++ b/.github/workflows/update_rules.yml
@@ -30,8 +30,12 @@ jobs:
       env:
         GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
       run: |
-        git config --local user.email "github-actions[bot]@users.noreply.github.com"
-        git config --local user.name "github-actions[bot]"
-        git add fuck_ad_sr.conf README.md || echo "Nothing to add"
-        git commit -m "Auto update FuckAD rules" || exit 0
-        git push origin HEAD:main --force
+        git config --local user.email "53632549+Brandonjhd@users.noreply.github.com"
+        git config --local user.name "Brandonjhd"
+        git add fuck_ad_sr.conf README.md
+        if git diff --staged --quiet; then
+          echo "No changes to commit"
+        else
+          git commit -m "Auto update FuckAD rules"
+          git push origin HEAD:main --force
+        fi
