--- a/.github/workflows/update_rules.yml
+++ b/.github/workflows/update_rules.yml
@@ -31,7 +31,7 @@ jobs:
         GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
       run: |
         git config --local user.email "53632549+Brandonjhd@users.noreply.github.com"
-        git config --local user.name "Brandonjhd"
+        git config --local user.name "uxudjs"
         git add fuck_ad_sr.conf README.md
         if git diff --staged --quiet; then
           echo "No changes to commit"
