--- a/.github/workflows/update_rules.yml
+++ b/.github/workflows/update_rules.yml
@@ -30,7 +30,7 @@ jobs:
       env:
         GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
       run: |
-        git config --local user.email "53632549+Brandonjhd@users.noreply.github.com"
+        git config --local user.email "53632549+uxudjs@users.noreply.github.com"
         git config --local user.name "uxudjs"
         git add fuck_ad_sr.conf README.md
         if git diff --staged --quiet; then
